{
  "version": 4,
  "terraform_version": "1.0.6",
  "serial": 272,
  "lineage": "505b18d3-67d0-ca01-8310-2d4ce458fd90",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04aea775713c261f0",
            "domain": "vpc",
            "id": "eipalloc-04aea775713c261f0",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-237-89-149.compute-1.amazonaws.com",
            "public_ip": "54.237.89.149",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ins1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08c40ec9ead489470",
            "arn": "arn:aws:ec2:us-east-1:667563228432:instance/i-055ce8a8f52ed3155",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-055ce8a8f52ed3155",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terra",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0bb3496eb8203fd26",
            "private_dns": "ip-10-0-1-236.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.236",
            "public_ip": "23.20.121.16",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0fdfa915cf7b332b6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-01a30e477f386e66f"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05344c7ef5a585514",
            "tags": {
              "Name": "terraform1"
            },
            "tags_all": {
              "Name": "terraform1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01a30e477f386e66f"
            ]
          },
          "dependencies": [
            "aws_security_group.public",
            "aws_subnet.public",
            "aws_vpc.server1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ins2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08c40ec9ead489470",
            "arn": "arn:aws:ec2:us-east-1:667563228432:instance/i-0eae7d296db7fe72c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0eae7d296db7fe72c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terra",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-05d7e522ec2abe085",
            "private_dns": "ip-10-0-2-103.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.103",
            "public_ip": "3.231.95.183",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-082d25f2a34ab7fbe",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-01a30e477f386e66f"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0db2aebbe934bea7e",
            "tags": {
              "Name": "terraform2"
            },
            "tags_all": {
              "Name": "terraform2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01a30e477f386e66f"
            ]
          },
          "dependencies": [
            "aws_security_group.public",
            "aws_subnet.private",
            "aws_vpc.server1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "myInternetGateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:667563228432:internet-gateway/igw-01e4e19e04ab6856f",
            "id": "igw-01e4e19e04ab6856f",
            "owner_id": "667563228432",
            "tags": {
              "Name": "myinternetgw"
            },
            "tags_all": {
              "Name": "myinternetgw"
            },
            "vpc_id": "vpc-0cd2eef4f6d8c269e"
          },
          "dependencies": [
            "aws_vpc.server1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "server1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:667563228432:loadbalancer/app/Terra/e3b95e7c142376a5",
            "arn_suffix": "app/Terra/e3b95e7c142376a5",
            "desync_mitigation_mode": "defensive",
            "dns_name": "Terra-1972238558.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:667563228432:loadbalancer/app/Terra/e3b95e7c142376a5",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "Terra",
            "preserve_host_header": false,
            "security_groups": [
              "sg-01a30e477f386e66f"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-05344c7ef5a585514"
              },
              {
                "subnet_id": "subnet-0db2aebbe934bea7e"
              }
            ],
            "subnets": [
              "subnet-05344c7ef5a585514",
              "subnet-0db2aebbe934bea7e"
            ],
            "tags": {
              "Name": "Terra"
            },
            "tags_all": {
              "Name": "Terra"
            },
            "vpc_id": "vpc-0cd2eef4f6d8c269e",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.public",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.server1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "LG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:667563228432:listener/app/Terra/e3b95e7c142376a5/9d80b2f8eed49714",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:667563228432:targetgroup/terra-tg1/61a430f92de53538",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:667563228432:listener/app/Terra/e3b95e7c142376a5/9d80b2f8eed49714",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:667563228432:loadbalancer/app/Terra/e3b95e7c142376a5",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.server1",
            "aws_lb_target_group.tg_terraform987",
            "aws_security_group.public",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.server1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg_terraform987",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:667563228432:targetgroup/terra-tg1/61a430f92de53538",
            "arn_suffix": "targetgroup/terra-tg1/61a430f92de53538",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:667563228432:targetgroup/terra-tg1/61a430f92de53538",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "terra-tg1",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0cd2eef4f6d8c269e"
          },
          "dependencies": [
            "aws_vpc.server1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "tg-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:667563228432:targetgroup/terra-tg1/61a430f92de53538-20221103212630863700000004",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:667563228432:targetgroup/terra-tg1/61a430f92de53538",
            "target_id": "i-055ce8a8f52ed3155"
          },
          "dependencies": [
            "aws_instance.ins1",
            "aws_lb_target_group.tg_terraform987",
            "aws_security_group.public",
            "aws_subnet.public",
            "aws_vpc.server1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "tg-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:667563228432:targetgroup/terra-tg1/61a430f92de53538-20221103212621302100000003",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:667563228432:targetgroup/terra-tg1/61a430f92de53538",
            "target_id": "i-0eae7d296db7fe72c"
          },
          "dependencies": [
            "aws_instance.ins2",
            "aws_lb_target_group.tg_terraform987",
            "aws_security_group.public",
            "aws_subnet.private",
            "aws_vpc.server1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "myNatGateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04aea775713c261f0",
            "connectivity_type": "public",
            "id": "nat-0ec050d8ecb8e7aee",
            "network_interface_id": "eni-0dcd366d850289547",
            "private_ip": "10.0.1.215",
            "public_ip": "54.237.89.149",
            "subnet_id": "subnet-05344c7ef5a585514",
            "tags": {
              "Name": "myNatGateway"
            },
            "tags_all": {
              "Name": "myNatGateway"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_subnet.public",
            "aws_vpc.server1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:667563228432:route-table/rtb-0dbe368af7f4d90e1",
            "id": "rtb-0dbe368af7f4d90e1",
            "owner_id": "667563228432",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0ec050d8ecb8e7aee",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "privateRouteTable"
            },
            "tags_all": {
              "Name": "privateRouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cd2eef4f6d8c269e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.myNatGateway",
            "aws_subnet.public",
            "aws_vpc.server1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:667563228432:route-table/rtb-025bd698787081f73",
            "id": "rtb-025bd698787081f73",
            "owner_id": "667563228432",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01e4e19e04ab6856f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "publicRouteTable"
            },
            "tags_all": {
              "Name": "publicRouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cd2eef4f6d8c269e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.myInternetGateway",
            "aws_vpc.server1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "forPrivate",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c6de14fe219d022d",
            "route_table_id": "rtb-0dbe368af7f4d90e1",
            "subnet_id": "subnet-0db2aebbe934bea7e"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.myNatGateway",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.server1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "forPublic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fcc1da5110a8f24c",
            "route_table_id": "rtb-025bd698787081f73",
            "subnet_id": "subnet-05344c7ef5a585514"
          },
          "dependencies": [
            "aws_internet_gateway.myInternetGateway",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.server1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:667563228432:security-group/sg-01a30e477f386e66f",
            "description": "Public internet access",
            "egress": [],
            "id": "sg-01a30e477f386e66f",
            "ingress": [],
            "name": "my-public-sg",
            "name_prefix": "",
            "owner_id": "667563228432",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "my_sg"
            },
            "tags_all": {
              "Name": "my_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cd2eef4f6d8c269e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.server1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "public_in_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-169867191",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01a30e477f386e66f",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.public",
            "aws_vpc.server1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "public_in_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-1179217856",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-01a30e477f386e66f",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.public",
            "aws_vpc.server1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:667563228432:subnet/subnet-0db2aebbe934bea7e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0db2aebbe934bea7e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "667563228432",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "server1-PrivateSubnet"
            },
            "tags_all": {
              "Name": "server1-PrivateSubnet"
            },
            "vpc_id": "vpc-0cd2eef4f6d8c269e"
          },
          "dependencies": [
            "aws_vpc.server1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:667563228432:subnet/subnet-05344c7ef5a585514",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05344c7ef5a585514",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "667563228432",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "server1-publicSubnet"
            },
            "tags_all": {
              "Name": "server1-publicSubnet"
            },
            "vpc_id": "vpc-0cd2eef4f6d8c269e"
          },
          "dependencies": [
            "aws_vpc.server1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "server1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:667563228432:vpc/vpc-0cd2eef4f6d8c269e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a71ae768cd782e8d",
            "default_route_table_id": "rtb-0a6d5aaf00391f17f",
            "default_security_group_id": "sg-07cf73c2b19054d2f",
            "dhcp_options_id": "dopt-0f6d0758a45b38af5",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0cd2eef4f6d8c269e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a6d5aaf00391f17f",
            "owner_id": "667563228432",
            "tags": {
              "Name": "server1-vpc"
            },
            "tags_all": {
              "Name": "server1-vpc"
            }
          }
        }
      ]
    }
  ]
}